ecmascript/parser/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersOfNonArrayTypes/input.ts.stderr
error[1014]: A rest parameter must be last in a parameter list
 --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersOfNonArrayTypes/input.ts:5:11
  |
5 | var f2 = (...x: Date, ...y: boolean) => { }
  |           ^^^

error[1014]: A rest parameter must be last in a parameter list
  --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersOfNonArrayTypes/input.ts:13:9
   |
13 |     foo(...x: number, ...y: number);
   |         ^^^

error[1014]: A rest parameter must be last in a parameter list
  --> $DIR/tests/typescript-errors/tsc/types/objectTypeLiteral/callSignatures/restParametersOfNonArrayTypes/input.ts:23:21
   |
23 |     a: function foo(...x: number, ...y: Date) { },
   |                     ^^^

